2016-09-29  Andrew Burgess  <andrew.burgess@embecosm.com>

	* config/arc/arc-c.def: Add __NPS400__ define.
	* config/arc/arc.h (TARGET_NPS400): Define.

2016-09-29  Claudiu Zissulescu  <claziss@synopsys.com>

	* config/arc/arc-c.c: New file.
	* config/arc/arc-c.def: Likewise.
	* config/arc/t-arc: Likewise.
	* config.gcc: Include arc-c.o as c and cpp object.
	* config/arc/arc-protos.h (arc_cpu_cpp_builtins): Add prototype.
	* config/arc/arc.h (TARGET_CPU_CPP_BUILTINS): Use
	arc_cpu_cpp_builtins.

2016-09-28  Andrew Burgess  <andrew.burgess@embecosm.com>

	* config/arc/arc.h (MULTILIB_DEFAULTS): Setup for nps400 if
	appropriate.
	* config/arc/arc.c (arc_init): Setup the
	TARGET_CASE_VECTOR_PC_RELATIVE if we're compiling for nps400.
	(arc_override_options): Set default cpu type for nps400.
	* config.gcc: Add nps400 to the with-cpu list, and define
	TARGET_CPU_${with_cpu} as appropriate.

2016-09-28  Andrew Burgess  <andrew.burgess@embecosm.com>

	* config/arc/arc.h (ASM_SPEC): Use arc700 as the assembler cpu
	when assembling nps400 code.
	* config/arc/arc.c (arc_init): Use ARC700 as the cpu string
	embeded into the assembler file for nps400 code.

2016-09-27  Joern Rennecke  <joern.rennecke@embecosm.com>
            Andrew Burgess  <andrew.burgess@embecosm.com>

        * config/arc/arc.h (STRICT_ALIGNMENT): Make use of
	unaligned_access config variable.
        * config/arc/arc.c (arc_expand_movmem): Take STRICT_ALIGNMENT into
	account.

2013-08-08  Joern Rennecke  <joern.rennecke@embecosm.com>

	* builtins.c (fold_builtin_constant_p): Consider addresses for
	global/static variables as constant when they are bound locally.

2016-06-16  Claudiu Zissulescu  <claziss@synopsys.com>
	    Joern Rennecke  <joern.rennecke@embecosm.com>

	* config/arc/arc.c (arc_print_operand_address): Handle pc-relative
	addresses.
	(arc_needs_pcl_p): Add GOTOFFPC.
	(arc_legitimate_pic_addr_p): Likewise.
	(arc_output_pic_addr_const): Likewise.